tests/src/frontend/typechecking/invalid/invalid_tparam_match_6.sk
fun no<V: nonNullable>(x: V): Nullable<Int> {
  x match {
  | Int _ -> Null()
  }
}
